--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ permissions:
   packages: read
 
 env:
-  GODOT_VERSION: "4.3"          # образ barichello/godot-ci:4.3
+  GODOT_VERSION: "4.3"         
   EXPORT_NAME: ${{ inputs.export_name }}
   PROJECT_PATH: ${{ inputs.project_path }}
 
@@ -123,15 +123,28 @@ jobs:
           path: build/build_${{ inputs.version }}_windows.zip
           if-no-files-found: error
           compression-level: 6
+  
+  release:
+    name: Create Git Tag & Release
+    runs-on: ubuntu-latest
+    needs: export-windows
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: build_${{ inputs.version }}_windows
+          path: ./release
 
       - name: Configure Git
-        working-directory: ${{ github.workspace }}
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
 
-      - name: Create and push tag (idempotent)
-        working-directory: ${{ github.workspace }}
+      - name: Create and push tag
         shell: bash
         run: |
           set -eux
@@ -145,13 +158,13 @@ jobs:
           git push origin "$TAG"
           echo "tag_name=$TAG" >> $GITHUB_ENV
 
-      - name: Create Release and Upload
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: build/build_${{ env.tag_name }}_windows.zip
+          files: release/build_${{ env.tag_name }}_windows.zip
           tag_name: ${{ env.tag_name }}
           name: Release ${{ env.tag_name }}
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
