--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,90 +1,95 @@
-name: "godot-ci windows export"
+name: "Godot CI Build & Release (Spine)"
 
 on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Release version (e.g. 0.1.0)"
+        description: "The version for the build"
         required: true
-        default: "test"
+      debug_build:
+        description: "Whether to build in debug mode"
+        required: true
+        type: choice
+        options: ['true', 'false']
+        default: 'false'
       export_name:
-        description: "Output name (without .exe)"
+        description: "exe name"
+        required: false
+        default: "the_vow"
+      preset_name:
+        description: "Godot export preset"
         required: true
-        default: "test-project"
-      project_path:
-        description: "Path to folder with project.godot ('.' if root)"
-        required: true
-        default: "."
+        type: choice
+        options: ['windows', 'linux']
+        default: "windows"
 
 permissions:
   contents: write
   packages: read
 
 env:
-  GODOT_VERSION: "4.3"         
-  EXPORT_NAME: ${{ inputs.export_name }}
-  PROJECT_PATH: ${{ inputs.project_path }}
+  GODOT_VERSION: "4.4.1"
+  GODOT_CHANNEL: "stable"
 
 jobs:
-  export-windows:
-    name: Windows Export + Tag + Release
+  build:
+    name: Build ${{ inputs.preset_name }} (.exe / .x86_64)
     runs-on: ubuntu-24.04
     container:
-      image: barichello/godot-ci:4.3
+      image: ghcr.io/mimyr-games-ltd/ci-sandbox:latest
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           lfs: true
 
-      - name: Prepare Godot templates & settings for $HOME
+      - name: Prepare Godot environment
         shell: bash
         run: |
           set -eux
           HOME_DIR="$HOME"
           mkdir -p "$HOME_DIR/.local/share/godot/export_templates/"
-          mkdir -p "$HOME_DIR/.config/"
-          
-          if [ -d /root/.config/godot ]; then
-            mv /root/.config/godot "$HOME_DIR/.config/godot"
-          else
-            mkdir -p "$HOME_DIR/.config/godot"
-          fi
-          
-          if [ -d "/root/.local/share/godot/export_templates/${GODOT_VERSION}.stable" ]; then
-            mv "/root/.local/share/godot/export_templates/${GODOT_VERSION}.stable" \
-               "$HOME_DIR/.local/share/godot/export_templates/${GODOT_VERSION}.stable"
-          else
-            echo "⚠️ No templates found under /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable"
-            ls -laR /root/.local/share/godot || true
-          fi
-          
-          echo "== After move =="
-          ls -la "$HOME_DIR/.local/share/godot/export_templates/${GODOT_VERSION}.stable" || true
+          mkdir -p "$HOME_DIR/.config/godot"
 
-      - name: Install wine + rcedit; write Editor Settings (Windows section)
+          ROOT_TEMPL_DIR="/root/.local/share/godot/export_templates/${GODOT_VERSION}.${GODOT_CHANNEL}"
+          HOME_TEMPL_DIR="$HOME_DIR/.local/share/godot/export_templates/${GODOT_VERSION}.${GODOT_CHANNEL}"
+
+          if [ -d "$ROOT_TEMPL_DIR" ]; then
+            rsync -a "$ROOT_TEMPL_DIR/" "$HOME_TEMPL_DIR/"
+          else
+            echo "⚠️ No export templates in $ROOT_TEMPL_DIR"
+            ls -R /root/.local/share/godot || true
+          fi
+
+          if [ -f "/root/.config/godot/editor_settings-4.4.tres" ]; then
+            cp "/root/.config/godot/editor_settings-4.4.tres" "$HOME/.config/godot/"
+          fi
+
+          echo "== Templates in $HOME_TEMPL_DIR =="
+          ls -la "$HOME_TEMPL_DIR" || true
+
+      - name: Ensure rcedit & wine configured
         shell: bash
         run: |
           set -eux
-          apt-get update
-          apt-get install -y --no-install-recommends wine64 wget ca-certificates
-          mkdir -p /opt/rcedit
-          wget -O /opt/rcedit/rcedit-x64.exe \
-            "https://github.com/electron/rcedit/releases/download/v2.0.0/rcedit-x64.exe"
-
-          # Godot 4.3 хранит настройки в editor_settings-4.3.tres
-          ES="$HOME/.config/godot/editor_settings-4.3.tres"
+          ES="$HOME/.config/godot/editor_settings-4.4.tres"
           if [ ! -f "$ES" ]; then
             echo '[gd_resource type="EditorSettings" format=3]' > "$ES"
-            echo '' >> "$ES"
             echo '[resource]' >> "$ES"
           fi
 
-          # Прописываем wine + rcedit (перезаписывая существующие строки, если были)
-          # Удалим старые ключи, если есть
+          if [ ! -f /opt/rcedit/rcedit-x64.exe ]; then
+            echo "Downloading missing rcedit..."
+            wget -O /opt/rcedit/rcedit-x64.exe \
+              https://github.com/electron/rcedit/releases/download/v2.0.0/rcedit-x64.exe
+          fi
+
           sed -i '/^export\/windows\/rcedit *=/d' "$ES" || true
           sed -i '/^export\/windows\/wine *=/d' "$ES" || true
-          # Добавим наши
           if command -v wine64 >/dev/null 2>&1; then
             echo 'export/windows/wine="/usr/bin/wine64"' >> "$ES"
           else
@@ -95,39 +100,52 @@ jobs:
           echo "== Editor Settings =="
           cat "$ES"
 
-          echo "== Check templates =="
-          ls -la "$HOME/.local/share/godot/export_templates/${GODOT_VERSION}.stable" || true
-
-      - name: Windows Build
+      - name: Export build
         shell: bash
+        env:
+          PRESET: ${{ inputs.preset_name }}
+          DEBUG_BUILD: ${{ inputs.debug_build }}
+          EXPORT_NAME: ${{ inputs.export_name }}
+          VERSION: ${{ inputs.version }}
         run: |
           set -eux
-          mkdir -p build/windows
-          EXPORT_DIR="$(readlink -f build)"
-          cd "$PROJECT_PATH"
+          mkdir -p build/${PRESET}
+          EXPORT_DIR="$(realpath build)"
+          MODE=$([ "$DEBUG_BUILD" = "true" ] && echo debug || echo release)
+          OUT_PATH="${EXPORT_DIR}/${PRESET}/${EXPORT_NAME}"
 
-          # В preset'ах barichello-образа имя Windows-пресета обычно "Windows Desktop"
+          if [ "$PRESET" = "windows" ]; then
+            OUT_PATH="${OUT_PATH}.exe"
+          elif [ "$PRESET" = "linux" ]; then
+            OUT_PATH="${OUT_PATH}.x86_64"
+          fi
+
+          echo "== Godot version =="
+          godot --version
+
           godot --headless --verbose \
-            --export-release "windows" \
-            "$EXPORT_DIR/windows/${EXPORT_NAME}.exe"
+            --path . \
+            --export-"${MODE}" "${PRESET}" \
+            "${OUT_PATH}" \
+            --ci
 
-          # Упаковываем весь каталог windows (exe + pck + dll и т.п.)
-          cd "$EXPORT_DIR/windows"
-          zip -r "../build_${{ inputs.version }}_windows.zip" .
+          cd "build/${PRESET}"
+          zip -r "../build_${VERSION}_${PRESET}.zip" .
           cd - >/dev/null
 
-      - name: Upload Artifact (zip)
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: build_${{ inputs.version }}_windows
-          path: build/build_${{ inputs.version }}_windows.zip
+          name: build_${{ inputs.version }}_${{ inputs.preset_name }}
+          path: build/build_${{ inputs.version }}_${{ inputs.preset_name }}.zip
           if-no-files-found: error
           compression-level: 6
-  
+
+
   release:
     name: Create Git Tag & Release
     runs-on: ubuntu-latest
-    needs: export-windows
+    needs: build
 
     steps:
       - name: Checkout
@@ -136,7 +154,7 @@ jobs:
       - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
-          name: build_${{ inputs.version }}_windows
+          name: build_${{ inputs.version }}_${{ inputs.preset_name }}
           path: ./release
 
       - name: Configure Git
@@ -161,10 +179,10 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: release/build_${{ env.tag_name }}_windows.zip
+          files: release/build_${{ env.tag_name }}_${{ inputs.preset_name }}.zip
           tag_name: ${{ env.tag_name }}
           name: Release ${{ env.tag_name }}
           draft: false
-          prerelease: false
+          prerelease: ${{ inputs.debug_build }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
